--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.0",
   "description": "PoE 2 Atlas Sentinel Strategy Optimizer",
   "author": "Hartman",
-  "license": "MIT",
+  "license": "CC-BY-NC-4.0",
   "type": "module",
   "main": "dist-electron/electron/main.cjs",
   "scripts": {
